--- a/style.css
+++ b/style.css
@@ -4,9 +4,23 @@
 }
 main{
     
-    background-color: rgb(44, 20, 63);
+    background-color: indigo;
     color: white;
+    width: 100%;
+    height: 60vh;
+    border-radius: 15px;
 }
 #gen{
     max-height: 100px;
+}
+#profe{
+    padding-top: 30vh;
+}
+#biologia{
+    background-color: rgb(209, 241, 220);
+    color: black;
+    
+}
+#biologia h1{
+    text-align: center;
 }
